--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,5 +14,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag erwineu/protobuf-compiler:$(date +%s)
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Build the protobuf compiler on docker image
+      run: |
+        docker build . --file Dockerfile --tag erwineu/protobuf-compiler:latest \
+          --build-arg REVISION=${{ github.sha }} \
+          --build-arg TIMESTAMP="$(date +%Y%m%d)"
